// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagList renders as a span with custom margins 1`] = `
<DocumentFragment>
  .emotion-6 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #535353;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 48px;
  margin-bottom: 4px;
}

.emotion-1:last-child {
  margin-right: 0;
}

<ul
    class="emotion-6"
  >
    <li
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        first label
      </span>
    </li>
    <li
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        second label
      </span>
    </li>
    <li
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        third label
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as a span with custom size 1`] = `
<DocumentFragment>
  .emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-1:last-child {
  margin-right: 0;
}

.emotion-6 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #535353;
  min-height: 40px;
  padding: 8px 12px;
  line-height: calc(40px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<ul
    class="emotion-6"
  >
    <li
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        first label
      </span>
    </li>
    <li
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        second label
      </span>
    </li>
    <li
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        third label
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as a span with defaults 1`] = `
<DocumentFragment>
  .emotion-6 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-1:last-child {
  margin-right: 0;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #535353;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<ul
    class="emotion-6"
  >
    <li
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        first label
      </span>
    </li>
    <li
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        second label
      </span>
    </li>
    <li
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        third label
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as an anchor with custom margins 1`] = `
<DocumentFragment>
  .emotion-6 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #535353;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 48px;
  margin-bottom: 4px;
}

.emotion-1:last-child {
  margin-right: 0;
}

<ul
    class="emotion-6"
  >
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url1.com"
      >
        first label
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url2.com"
      >
        second label
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url3.com"
      >
        third label
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as an anchor with custom size 1`] = `
<DocumentFragment>
  .emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-1:last-child {
  margin-right: 0;
}

.emotion-6 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #535353;
  min-height: 40px;
  padding: 8px 12px;
  line-height: calc(40px - 2px * 2);
  border-radius: 100vw;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<ul
    class="emotion-6"
  >
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url1.com"
      >
        first label
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url2.com"
      >
        second label
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url3.com"
      >
        third label
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as an anchor with defaults 1`] = `
<DocumentFragment>
  .emotion-6 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-1:last-child {
  margin-right: 0;
}

.emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #535353;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<ul
    class="emotion-6"
  >
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url1.com"
      >
        first label
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url2.com"
      >
        second label
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="www.url3.com"
      >
        third label
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
